--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <meta name="twitter:image" content="https://whattime.today/og-image.png" />
 
   <title>WTT - What Time Today</title>
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="397ad6f4-fe13-4039-a7b0-de64c943895f"></script>
 </head>
 
 <body>
