improve SEO: better meta descriptions, add noscript fallback

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
   <meta name="theme-color" content="#2563eb" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-  <meta name="description" content="Share your availability as text in seconds" />
+  <meta name="description" content="Simple tool to share your availability as plain text. Select time slots, convert timezones, copy and send. No calendar links needed." />
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="WTT - What Time Today" />
-  <meta property="og:description" content="Share your availability as text in seconds" />
+  <meta property="og:description" content="Simple tool to share your availability as plain text. Select time slots, convert timezones, copy and send. No calendar links needed." />
   <meta property="og:image" content="https://whattime.today/og-image.png" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="WTT - What Time Today" />
-  <meta name="twitter:description" content="Share your availability as text in seconds" />
+  <meta name="twitter:description" content="Simple tool to share your availability as plain text. Select time slots, convert timezones, copy and send. No calendar links needed." />
   <meta name="twitter:image" content="https://whattime.today/og-image.png" />
 
   <title>WTT - What Time Today</title>
@@ -31,6 +31,10 @@
 </head>
 
 <body>
+  <noscript>
+    <h1>WTT - What Time Today</h1>
+    <p>A simple tool to share your availability as plain text. Select time slots, add timezone conversion, and copy formatted text to share with friends, coworkers, or recruiters. No calendar links needed.</p>
+  </noscript>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
